--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -6,6 +6,8 @@ on:
     branches:
       - master
 
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,9 +17,9 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm test
-      - run: tsc && npm publish
+      - run: yarn
+      - run: yarn install-peers -f
+      - run: tsc && yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
       # - name: Docker Login
