--- a/package.json
+++ b/package.json
@@ -21,19 +21,16 @@
     "install-peers-cli": "^2.2.0",
     "mocha": "^6.1.4",
     "ts-node": "^8.2.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "firebase": "*",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "styled-components": "*"
   },
   "dependencies": {
-    "@types/firebase": "^3.2.1",
     "hybrid-components": "^3.0.4",
     "react-firebase-hooks": "^2.1.1",
     "react-social-login-buttons": "^3.0.0",
     "react-use-promise": "^0.2.0"
-  },
-  "peerDependencies": {
-    "firebase": "^7.6.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "styled-components": "^4.4.1"
   }
 }
