--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "author": "Tommaso De Rossi, morse <beats.by.morse@gmail.com>",
     "license": "ISC",
     "devDependencies": {
+        "@chakra-ui/core": "^0.8.0",
+        "@emotion/core": "^10.0.28",
+        "@emotion/styled": "^10.0.27",
+        "@types/js-cookie": "^2.2.5",
         "@types/mocha": "^5.2.7",
         "@types/node": "^12.0.7",
+        "emotion-theming": "^10.0.27",
         "firebase": "*",
-        "hybrid-components": "^3.0.4",
-        "install-peers-cli": "^2.2.0",
         "mocha": "^6.1.4",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-firebase-hooks": "^2.1.1",
         "ts-node": "^8.2.0",
-        "@types/js-cookie": "^2.2.5",
         "typescript": "^3.7.4"
     },
     "dependencies": {
