--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
+        "moduleResolution": "node",
         "lib": [
             "es2017",
             "es7",
@@ -22,6 +23,7 @@
         "dist",
         "tests",
         "test",
-        "example"
+        "example",
+        "esm"
     ]
 }
